Change endpoints signature; add small adjustments to tests